--- a/profile/demo.html
+++ b/profile/demo.html
@@ -50,8 +50,8 @@
     </div>
 </div>
 <script src="../script/lib/jQuery/jquery-1.8.2.js"></script>
-<script src="../script/jquery.extend.js"></script>
-<script src="../script/plugin/cloudTag/jquery.cloudTag.js"></script>
+<script src="../script/ui/jquery.extend.js"></script>
+<script src="../script/ui/jquery.cloudTag.js"></script>
 <script>
 $(function(){
     var $tags, pause = false;
